--- a/1v1lol/index.html
+++ b/1v1lol/index.html
@@ -6,27 +6,27 @@
     <title>1v1LOL Unblocked</title>
     <meta name="description" content="1v1LOL Unblocked is the top online build-and-fight game. Compete against real players in fast-paced 1v1 duels. Build, edit, and shoot to win.">
     <meta name="keywords" content="1v1lol, 1v1.lol, 1v1lol unblocked, multiplayer shooter, building game, action, unblocked games 76">
-    <link rel="canonical" href="https://onlyszgames.github.io/1v1lol" />
+    <link rel="canonical" href="https://fafgamess.github.io/1v1lol" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="1v1LOL Unblocked ⟐ The Ultimate 1v1 Game" />
     <meta property="og:description" content="1v1LOL Unblocked is the top online build-and-fight game. Compete against real players in fast-paced 1v1 duels. Build, edit, and shoot to win." />
-    <meta property="og:url" content="https://onlyszgames.github.io/1v1lol" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/1v1lol.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/1v1lol" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/1v1lol.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="1v1LOL Unblocked ⟐ The Ultimate 1v1 Game">
     <meta name="twitter:description" content="1v1LOL Unblocked is the top online build-and-fight game. Compete against real players in fast-paced 1v1 duels. Build, edit, and shoot to win.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/1v1lol.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/1v1lol.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "1v1LOL Online Build Battles",
-        "url": "https://onlyszgames.github.io/1v1lol",
+        "url": "https://fafgamess.github.io/1v1lol",
         "description": "1v1LOL Unblocked is the top online build-and-fight game. Compete against real players in fast-paced 1v1 duels. Build, edit, and shoot to win.",
         "genre": "Multiplayer",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/1v1lol.png"
+        "image": "https://fafgamess.github.io/img/1v1lol.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -393,7 +393,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -434,8 +434,8 @@ justify-content: center;}
     <div class="container">
 
         <div class="game-header" style="background-color: #c5e1a5;">
-            <h1>1v1LOL Online Build Battles</h1>
-            <p>Challenge players worldwide in 1v1LOL Unblocked. This is the ultimate competitive 1v1 building and shooting game. Master the mechanics and dominate the arena. Are you ready?</p>
+            <h1>⚔️ 1v1 Lol Unblocked</h1>
+            <p>Get ready to build, shoot, and dominate in 1v1 Lol Unblocked, one of the most thrilling third-person shooter games online. This fast-paced title combines shooting mechanics with strategic building gameplay, putting your reflexes, aim, and creativity to the test. Whether you’re training for Battle Royale or challenging real players in 1v1 duels, 1v1lol unblocked lets you jump straight into action no downloads, no limits, and no restrictions. Play now on GitHub.io or enjoy seamless fun through FAF Games Unblocked anytime, anywhere.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="1v1lol">
@@ -451,7 +451,7 @@ justify-content: center;}
         </div>
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/1v1lol.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/1v1lol.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play 1v1LOL Online Build Battles</div>
@@ -464,9 +464,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/1v1lol.png" alt="1v1LOL Online Build Battles
+            <img src="https://fafgamess.github.io/img/1v1lol.png" alt="1v1LOL Online Build Battles
 Gameplay" class="game-description-image" title="1v1LOL Online Build Battles">
-            <h2>⚔️ About 1v1LOL</h2><p>1v1LOL is the premier online 1v1 build-and-shoot game, now available unblocked. This game pits you against a live opponent in a test of building speed, editing precision, and shooting accuracy. It captures the most intense 'box fight' and 'build battle' moments from a Battle Royale and makes it the entire game. You must think and act instantly, building cover and taking high ground. This 1v1LOL unblocked version is the most popular, competitive, and skill-based builder-shooter on the web.</p><h2>🎮 Game Features in 1v1LOL</h2><p>This game is pure, high-skill competition. The features are polished for pro-level play.</p><ul><li>Instant online 1v1 matchmaking.</li><li>Fast-paced build-and-edit mechanics.</li><li>Multiple game modes, including Box Fights and 1v1 Duels.</li><li>A high skill ceiling that rewards practice.</li></ul><p>Playing 1v1LOL unblocked is the best way to prove your skills.</p><h2>🕹️ How to Play 1v1LOL</h2><p>The controls are deep. Use WASD to move, Space to jump, and Shift to crouch. Use Z, X, C, V to select building pieces. Use F to edit. Use the mouse to aim and fire. The key to winning is speed. You must build and edit faster than your opponent. Always try to get the 'high ground' by building above them. Practice your edits to surprise them. Master the controls of 1v1LOL unblocked and climb the ranks.</p>
+            <h2>⚔️ About 1v1 Lol</h2><p>1v1 Lol is a dynamic online multiplayer experience blending third-person shooting with real-time building mechanics. Inspired by Fortnite, it focuses purely on skill-based gameplay without unnecessary distractions. Battle in 1v1 matches, team up in 2v2 fights, or join the Battle Royale mode featuring up to eight players. The 1v1 Lol Unblocked version allows instant browser play even on restricted networks like school or work. That’s why it’s one of the top 1v1 lol unblocked games on the web. Thanks to platforms like FAF Games, players can enjoy faf games unblocked with smooth performance and zero interruptions on any device including Chromebooks and PCs.</p><h2>✨ Game Features of 1v1 Lol Unblocked</h2><p>1v1 Lol Unblocked delivers smooth controls, competitive action, and smart building mechanics that reward strategy and precision. Its lightweight HTML5 design ensures flawless performance across browsers and devices.</p><ul><li>🔫 Fast Building Mechanics: Instantly build ramps, walls, and floors to outsmart opponents in real-time combat.</li><li>🎮 Smooth Controls & Performance: Lightweight HTML5 design ensures lag-free gameplay on GitHub.io and all devices.</li><li>Multiple game modes, including Box Fights and 1v1 Duels.</li><li>🏆 Skill-Based Combat: Combine precise shooting with smart building to dominate your rivals in this unblocked game.</li></ul><p>Whether you’re sharpening your reflexes or enjoying quick matches, 1v1lol unblocked offers non-stop action and competitive fun for all ages.</p><h2>🕹️ How to Play 1v1 Lol Unblocked</h2><p>Playing 1v1 Lol Unblocked is easy to learn but takes time to master. Use W, A, S, D to move, your mouse to aim and shoot, and R to reload. You can build using Z, X, C, V and edit with F to gain control of the battlefield. Your mission is simple outbuild and outshoot your opponent. Build ramps for height advantage, use structures for cover, and aim for precise headshots. Each match is short, fast-paced, and perfect for quick gaming sessions during school or work breaks. Since 1v1 Lol Unblocked runs directly on GitHub.io, there’s no need for downloads or installations just click and play instantly. Whether you enjoy faf games or faf games unblocked, this version offers smooth, lag-free gameplay anytime, anywhere.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -527,7 +527,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/bloons-tower-defense-1" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bloons-tower-defense-1.png" alt="Bloons Tower Defense 1 The Original TD Classic">
+                                <img src="https://fafgamess.github.io/img/bloons-tower-defense-1.png" alt="Bloons Tower Defense 1 The Original TD Classic">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bloons Tower Defense 1 The Original TD Classic</h3>
@@ -538,7 +538,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/thumb-fighter-christmas" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/thumb-fighter-christmas.png" alt="Thumb Fighter Christmas A Festive 2-Player Brawl">
+                                <img src="https://fafgamess.github.io/img/thumb-fighter-christmas.png" alt="Thumb Fighter Christmas A Festive 2-Player Brawl">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Thumb Fighter Christmas A Festive 2-Player Brawl</h3>
@@ -549,7 +549,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/starblast" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/starblast.png" alt="Starblast io Multiplayer Space Combat">
+                                <img src="https://fafgamess.github.io/img/starblast.png" alt="Starblast io Multiplayer Space Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Starblast io Multiplayer Space Combat</h3>
@@ -560,7 +560,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/stickman-run" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-run.png" alt="Stickman Run Fast Platformer">
+                                <img src="https://fafgamess.github.io/img/stickman-run.png" alt="Stickman Run Fast Platformer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Run Fast Platformer</h3>
@@ -571,7 +571,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/eggbot-vs-zombies" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/eggbot-vs-zombies.png" alt="Eggbot Vs Zombies A Scrambled Showdown">
+                                <img src="https://fafgamess.github.io/img/eggbot-vs-zombies.png" alt="Eggbot Vs Zombies A Scrambled Showdown">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Eggbot Vs Zombies A Scrambled Showdown</h3>
@@ -582,7 +582,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/soccer-random" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
+                                <img src="https://fafgamess.github.io/img/soccer-random.png" alt="Soccer Random Physics Battles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Soccer Random Physics Battles</h3>
@@ -593,7 +593,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/go-kart-go-ultra" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/go-kart-go-ultra.png" alt="Go Kart Go Ultra Kart Racing">
+                                <img src="https://fafgamess.github.io/img/go-kart-go-ultra.png" alt="Go Kart Go Ultra Kart Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Go Kart Go Ultra Kart Racing</h3>
@@ -604,7 +604,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/burnin-rubber-5-xs" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/burnin-rubber-5-xs.png" alt="Burnin Rubber 5 XS The Ultimate Combat Race">
+                                <img src="https://fafgamess.github.io/img/burnin-rubber-5-xs.png" alt="Burnin Rubber 5 XS The Ultimate Combat Race">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Burnin Rubber 5 XS The Ultimate Combat Race</h3>
@@ -615,7 +615,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/super-mario-bros" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/super-mario-bros.png" alt="Super Mario Bros">
+                                <img src="https://fafgamess.github.io/img/super-mario-bros.png" alt="Super Mario Bros">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Super Mario Bros</h3>
@@ -626,7 +626,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/merge-fellas" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/merge-fellas.png" alt="Merge Fellas A Wacky Merging Puzzle">
+                                <img src="https://fafgamess.github.io/img/merge-fellas.png" alt="Merge Fellas A Wacky Merging Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Merge Fellas A Wacky Merging Puzzle</h3>
@@ -637,7 +637,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/battle-golf" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/battle-golf.png" alt="Battle Golf">
+                                <img src="https://fafgamess.github.io/img/battle-golf.png" alt="Battle Golf">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Battle Golf</h3>
@@ -648,7 +648,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/tictactoe" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tictactoe.png" alt="Tictactoe">
+                                <img src="https://fafgamess.github.io/img/tictactoe.png" alt="Tictactoe">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tictactoe</h3>
@@ -705,8 +705,8 @@ class="category-tag-item" style="background-color: #FF6D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -718,7 +718,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
