--- a/poor-bunny/index.html
+++ b/poor-bunny/index.html
@@ -6,27 +6,27 @@
     <title>Poor Bunny Unblocked | Dodge Traps Eat Carrots</title>
     <meta name="description" content="Poor Bunny Unblocked is a cute but brutal arcade platformer. Control a bunny, eat all the carrots in the level, and dodge deadly traps. Play solo or in 2-player mode.">
     <meta name="keywords" content="poor bunny, poor bunny unblocked, platformer, skill game, action game, 2-player games, cute game, pixel game">
-    <link rel="canonical" href="https://onlyszgames.github.io/poor-bunny" />
+    <link rel="canonical" href="https://fafgamess.github.io/poor-bunny" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Poor Bunny Unblocked | Dodge Traps Eat Carrots" />
     <meta property="og:description" content="Poor Bunny Unblocked is a cute but brutal arcade platformer. Control a bunny, eat all the carrots in the level, and dodge deadly traps. Play solo or in 2-player mode." />
-    <meta property="og:url" content="https://onlyszgames.github.io/poor-bunny" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/poor-bunny.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/poor-bunny" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/poor-bunny.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Poor Bunny Unblocked | Dodge Traps Eat Carrots">
     <meta name="twitter:description" content="Poor Bunny Unblocked is a cute but brutal arcade platformer. Control a bunny, eat all the carrots in the level, and dodge deadly traps. Play solo or in 2-player mode.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/poor-bunny.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/poor-bunny.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Poor Bunny",
-        "url": "https://onlyszgames.github.io/poor-bunny",
+        "url": "https://fafgamess.github.io/poor-bunny",
         "description": "Poor Bunny Unblocked is a cute but brutal arcade platformer. Control a bunny, eat all the carrots in the level, and dodge deadly traps. Play solo or in 2-player mode.",
         "genre": "Platformer",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/poor-bunny.png"
+        "image": "https://fafgamess.github.io/img/poor-bunny.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -435,7 +435,7 @@ justify-content: center;}
 
         <div class="game-header" style="background-color: #90caf9;">
             <h1>Poor Bunny</h1>
-            <p>Help the Poor Bunny! This fast-paced arcade platformer is all about skill and survival. In Poor Bunny Unblocked, you must eat all the carrots on the screen while avoiding spikes, arrows, and other deadly traps. Compete for a high score or play with a friend!</p>
+            <p>Jump into the exciting world of Poor Bunny Unblocked, a fast-paced arcade platformer that tests your reflexes and timing. Your goal is simple help the adorable bunny eat all the carrots while avoiding deadly traps like spikes, arrows, and falling boulders. Sounds easy? Think again! The game quickly becomes intense as traps appear faster and in unpredictable patterns. Compete for the highest score or challenge a friend in thrilling 2-player mode for double the fun.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="poor-bunny">
@@ -453,7 +453,7 @@ justify-content: center;}
     
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/poor-bunny.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/poor-bunny.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Poor Bunny</div>
@@ -466,9 +466,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/poor-bunny.png" alt="Poor Bunny
+            <img src="https://fafgamess.github.io/img/poor-bunny.png" alt="Poor Bunny
 Gameplay" class="game-description-image" title="Poor Bunny">
-            <h2>🐰 About Poor Bunny</h2><p>Poor Bunny is a fast-paced and challenging 2D arcade platformer. You control a small, cute bunny whose only goal is to eat all the carrots in a single-screen level. The catch? The level is filled with deadly, moving traps. Spikes pop from the ground, arrows shoot from the walls, and boulders fall from the sky. You must dodge everything and survive long enough to eat every last carrot. Poor Bunny Unblocked is a game of pure reflex and pattern recognition, wrapped in a cute pixel-art style.</p><h2>✨ Game Features Poor Bunny</h2><p>Poor Bunny is simple, but very addictive. Its main feature is its 2-player local co-op and versus modes. You can team up with a friend to clear levels together, or compete to see who can eat more carrots before being defeated. The game has a large number of unlockable bunnies, each with a different cosmetic skin. The traps are randomized but follow patterns, making the game a test of skill. Poor Bunny Unblocked is a perfect high-score chasing game for quick, intense play sessions.</p><h3>Survival Tips</h3><ul><li>Stay Alert: Traps can come from anywhere. Keep your eyes moving.</li><li>Small Jumps: Master the small, controlled hop. Big jumps can land you in trouble.</li><li>Bait Traps: Sometimes you can trigger a trap and quickly move out of the way.</li><li>2-Player Tactics: In co-op, one player can distract traps while the other eats.</li></ul><h2>🕹️ How to Play Poor Bunny</h2><p>The controls for Poor Bunny are extremely simple. Use the Arrow keys to move your bunny left and right. Press the Up Arrow to jump. That is it. Your objective is to run and jump around the level, touching all the carrots to eat them. While you do this, traps will constantly activate. If you are hit by any trap, you lose. The level resets, and you must try again. In 2-player mode, Player 1 uses WASD and Player 2 uses the Arrow keys. The challenge of Poor Bunny Unblocked is to clear all the carrots in one perfect, uninterrupted run.</p>
+            <h2>🐰 About Poor Bunny</h2><p>Poor Bunny is a cute yet challenging 2D game where quick reflexes are everything. As the bunny, you must survive waves of traps while collecting every carrot on screen. Each round is short but addictive, making it perfect for quick gaming sessions. With its charming pixel-art graphics, smooth gameplay, and responsive controls, Poor Bunny Unblocked is an ideal choice for fans of skill-based games on FAF Games, Unblocked Games, or Github.io platforms.</p><h2>✨ Game Features Poor Bunny</h2><p>The magic of Poor Bunny 1v1 LOL lies in its simplicity and challenge. You can enjoy solo runs or invite a friend to play in 2-player co-op or versus mode. Work together to survive longer or see who can collect the most carrots before getting caught by traps. Unlock new bunny skins as you progress and master the art of precise jumping and timing. The traps are randomly generated but follow predictable patterns learning them is key to surviving longer and scoring higher.</p><h3>Survival Tips</h3><ul><li>Stay alert traps activate from every direction.</li><li>Small Jumps: Master the small, controlled hop. Big jumps can land you in trouble.</li><li>Bait Traps: Sometimes you can trigger a trap and quickly move out of the way.</li><li>In 2-player mode, coordinate to survive longer.</li></ul><h2>🕹️ How to Play Poor Bunny</h2><p>Use the Arrow keys to move and jump, or WASD in 2-player mode. Jump over spikes, dodge arrows, and plan your moves carefully to eat every carrot. Once all carrots are collected, you move to the next round. In 1v1 Poor Bunny, teamwork or rivalry adds even more excitement to this fun, competitive platformer.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -524,7 +524,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stupid-zombies-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stupid-zombies-2.png" alt="Stupid Zombies 2 More Puzzles">
+                                <img src="https://fafgamess.github.io/img/stupid-zombies-2.png" alt="Stupid Zombies 2 More Puzzles">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stupid Zombies 2 More Puzzles</h3>
@@ -535,7 +535,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/bob-the-robber-4" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bob-the-robber-4.png" alt="Bob The Robber 4 A Stealth Adventure in Paris">
+                                <img src="https://fafgamess.github.io/img/bob-the-robber-4.png" alt="Bob The Robber 4 A Stealth Adventure in Paris">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bob The Robber 4 A Stealth Adventure in Paris</h3>
@@ -546,7 +546,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/idle-breakout" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/idle-breakout.png" alt="Idle Breakout">
+                                <img src="https://fafgamess.github.io/img/idle-breakout.png" alt="Idle Breakout">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Idle Breakout</h3>
@@ -557,7 +557,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/jumping-shell" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/jumping-shell.png" alt="Jumping Shell Precision Puzzle Game">
+                                <img src="https://fafgamess.github.io/img/jumping-shell.png" alt="Jumping Shell Precision Puzzle Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Jumping Shell Precision Puzzle Game</h3>
@@ -568,7 +568,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/nightpoint-io" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/nightpoint-io.png" alt="Nightpoint io Zombie Survival MMO">
+                                <img src="https://fafgamess.github.io/img/nightpoint-io.png" alt="Nightpoint io Zombie Survival MMO">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Nightpoint io Zombie Survival MMO</h3>
@@ -579,7 +579,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stickman-parkour-3" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-parkour-3.png" alt="Stickman Parkour 3 Epic Jumps">
+                                <img src="https://fafgamess.github.io/img/stickman-parkour-3.png" alt="Stickman Parkour 3 Epic Jumps">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Parkour 3 Epic Jumps</h3>
@@ -590,7 +590,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/digging-master" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/digging-master.png" alt="Digging Master Puzzle Path">
+                                <img src="https://fafgamess.github.io/img/digging-master.png" alt="Digging Master Puzzle Path">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Digging Master Puzzle Path</h3>
@@ -601,7 +601,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/blocky-trials" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blocky-trials.png" alt="Blocky Trials A 3D Physics Bike Game">
+                                <img src="https://fafgamess.github.io/img/blocky-trials.png" alt="Blocky Trials A 3D Physics Bike Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blocky Trials A 3D Physics Bike Game</h3>
@@ -612,7 +612,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/doodle-champion-island" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/doodle-champion-island.png" alt="Doodle Champion Island A Google RPG Classic">
+                                <img src="https://fafgamess.github.io/img/doodle-champion-island.png" alt="Doodle Champion Island A Google RPG Classic">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Doodle Champion Island A Google RPG Classic</h3>
@@ -623,7 +623,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/icy-purple-head-3" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/icy-purple-head-3.png" alt="Icy Purple Head 3 A Slippery Puzzle Platformer">
+                                <img src="https://fafgamess.github.io/img/icy-purple-head-3.png" alt="Icy Purple Head 3 A Slippery Puzzle Platformer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Icy Purple Head 3 A Slippery Puzzle Platformer</h3>
@@ -634,7 +634,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/tunnel-rush" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tunnel-rush.png" alt="Tunnel Rush">
+                                <img src="https://fafgamess.github.io/img/tunnel-rush.png" alt="Tunnel Rush">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tunnel Rush</h3>
@@ -645,7 +645,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/papas-donuteria" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/papas-donuteria.png" alt="Papas Donuteria To Go">
+                                <img src="https://fafgamess.github.io/img/papas-donuteria.png" alt="Papas Donuteria To Go">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Papas Donuteria To Go</h3>
@@ -702,8 +702,8 @@ class="category-tag-item" style="background-color: #FF3D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -715,7 +715,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
