--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAF Games – Best Unblocked Games on GitHub.io</title>
+    <title>FAF Games | Play Unblocked Games For Free</title>
     <meta name="description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!">
     <meta name="keywords" content="unblocked games, github.io, FAF Games, free browser games, play unblocked games online, github.io games, school-friendly games, online unblocked games">
     <link rel="canonical" href="https://fafgamess.github.io/" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
-    <meta property="og:title" content="FAF Games | Play Unblocked Games For Free" />
-    <meta property="og:description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone." />
+    <meta property="og:title" content="Github.io Games | Play Unblocked Games For Free" />
+    <meta property="og:description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!" />
     <meta property="og:url" content="https://fafgamess.github.io/" />
     <meta property="og:image" content="https://fafgamess.github.io/img/og-image.png" />
 <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="FAF Games //» Your Ultimate Hub For Unblocked Games">
-    <meta name="twitter:description" content="FAF Games is your premium portal for top unblocked games. Instantly play favorites like Shell Shockers, Minecraft Classic, and Slope online. Free browser gaming for everyone.">
+    <meta name="twitter:title" content="Github.io Games | Play Unblocked Games For Free">
+    <meta name="twitter:description" content="Play the best unblocked games on GitHub.io at FAF Games. Enjoy free browser games anywhere school, work, or home with no downloads or restrictions!">
     <meta name="twitter:image" content="https://fafgamess.github.io/img/twitter-image.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","url":"https://onlyszgames.github.io","name":"FAF Games","potentialAction":{"@type":"SearchAction","target":"https://fafgamess.github.io/search?q={search_term_string}","query-input":"required name=search_term_string"}}</script>
