--- a/1v1-lol/index.html
+++ b/1v1-lol/index.html
@@ -6,28 +6,28 @@
     <title>1v1 Lol Unblocked | Play Online For Free</title>
     <meta name="description" content="Play 1v1 Lol Unblocked the fast-paced shooter and builder game. Compete online, build structures, and show your skills in 1v1.lol unblocked wtf matches.">
     <meta name="keywords" content="1v1lol unblocked, 1v1 lol unblocked games, faf games, faf games unblocked, 1v1.lol unblocked wtf, play 1v1 lol online, unblocked shooting games>
-    <link rel="canonical" href="https://onlyszgames.github.io/1v1-lol" />
+    <link rel="canonical" href="https://fafgamess.github.io/1v1-lol" />
     <meta name="robots" content="index, follow">
     <meta name="author" content="FAF Games">
     <meta property="og:title" content="1v1 Lol Unblocked | Play Online For Free" />
-    <meta property="og:description" content="1v1 Lol Unblocked is the ultimate online builder-shooter. Practice your building, editing, and aiming skills against real players. Play 1v1, BR, or party modes." />
-    <meta property="og:url" content="https://onlyszgames.github.io/1v1-lol" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/1v1-lol.png" />
+    <meta property="og:description" content="Play 1v1 Lol Unblocked the fast-paced shooter and builder game. Compete online, build structures, and show your skills in 1v1.lol unblocked wtf matches." />
+    <meta property="og:url" content="https://fafgamess.github.io/1v1-lol" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/1v1-lol.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="1v1 Lol Unblocked | Play Online For Free">
-    <meta name="twitter:description" content="1v1 Lol Unblocked is the ultimate online builder-shooter. Practice your building, editing, and aiming skills against real players. Play 1v1, BR, or party modes.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/1v1-lol.png">
+    <meta name="twitter:description" content="Play 1v1 Lol Unblocked the fast-paced shooter and builder game. Compete online, build structures, and show your skills in 1v1.lol unblocked wtf matches.">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/1v1-lol.png">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "1v1 Lol",
-        "url": "https://onlyszgames.github.io/1v1-lol",
-        "description": "1v1 Lol Unblocked is the ultimate online builder-shooter. Practice your building, editing, and aiming skills against real players. Play 1v1, BR, or party modes.",
+        "url": "https://fafgamess.github.io/1v1-lol",
+        "description": "1Play 1v1 Lol Unblocked the fast-paced shooter and builder game. Compete online, build structures, and show your skills in 1v1.lol unblocked wtf matches.",
         "genre": "Multiplayer",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/1v1-lol.png"
+        "image": "https://fafgamess.github.io/img/1v1-lol.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -454,7 +454,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/1v1-lol.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/1v1-lol.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play 1v1 Lol</div>
@@ -467,7 +467,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/1v1-lol.png" alt="1v1 Lol
+            <img src="https://fafgamess.github.io/img/1v1-lol.png" alt="1v1 Lol
 Gameplay" class="game-description-image" title="1v1 Lol">
             <h2>⚔️ About 1v1 Lol</h2><p>1v1 Lol is a unique online multiplayer experience that combines third-person shooting with real-time building mechanics. Inspired by popular games like Fortnite, this version simplifies the gameplay to focus purely on skill and strategy. You can battle other players in intense 1v1 duels, team up in 2v2 matches, or explore the Battle Royale mode with up to eight players. The unblocked version of 1v1 Lol allows you to play instantly in your browser even on restricted networks like school or work. That’s why it’s one of the most popular 1v1 lol unblocked games available today. Sites like faf games make it easy to access and enjoy faf games unblocked, ensuring smooth performance and zero interruptions.</p><h2>✨ Game Features of 1v1 Lol Unblocked</h2><p>1v1 Lol Unblocked stands out for its smooth controls, competitive gameplay, and advanced building mechanics that let you outsmart your opponents in real time. The game’s lightweight HTML5 design ensures seamless performance on Chromebooks, PCs, and even mobile browsers, making it perfect for quick sessions anywhere. Players can choose from multiple exciting modes including 1v1 Mode for pure skill-based combat, Battle Royale Mode where eight players fight to be the last one standing, 2v2 Mode to test teamwork and coordination, and Practice Mode for improving your aim, edits, and building speed without the pressure of competition. With a wide variety of weapons ranging from shotguns and rifles to precision snipers, every match feels fast, strategic, and full of action. Whether you’re looking to sharpen your reaction time or simply enjoy fast-paced shooting fun, 1v1lol unblocked delivers nonstop excitement for all players.</p><h3>🧠 Pro Strategies for Winning in 1v1 Lol</h3><ul><li>Master the “90s”: Quickly build 90-degree ramps to gain vertical advantage over opponents.</li><li>Fast Editing: Edit walls and floors efficiently to surprise enemies or take quick shots.</li><li>Stay Above: High ground control gives you the best visibility and accuracy.</li><li>Weapon Switching: Combine shotgun bursts with rapid rifle follow-ups for maximum damage.</li></ul><h2>🕹️ How to Play 1v1 Lol Unblocked</h2><p>Learning to play 1v1 Lol Unblocked is simple, but mastering it takes practice. Use the W, A, S, D keys to move, your mouse to aim and shoot, and press R to reload. Building is your main weapon: use Z, X, C, and V keys to create walls, ramps, and floors. The F key lets you edit structures, creating new openings or traps for your enemies. The goal is to eliminate your opponent by combining smart building with precise shooting. Try to build ramps for height, then use your shotgun to land critical hits. Each match in 1v1 Lol Unblocked lasts only a few minutes, making it perfect for quick sessions during school breaks or work pauses. This game runs directly in your browser through GitHub.io, ensuring smooth gameplay and no installation hassles. Thanks to platforms like faf games and faf games unblocked, you can enjoy it instantly anywhere, anytime.</p>
             <div class="game-features">
@@ -530,7 +530,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/2048-multitask" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/2048-multitask.png" alt="2048 Multitask A Brain-Bending Puzzle">
+                                <img src="https://fafgamess.github.io/img/2048-multitask.png" alt="2048 Multitask A Brain-Bending Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">2048 Multitask A Brain-Bending Puzzle</h3>
@@ -541,7 +541,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/stickman-parkour-3" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-parkour-3.png" alt="Stickman Parkour 3 Epic Jumps">
+                                <img src="https://fafgamess.github.io/img/stickman-parkour-3.png" alt="Stickman Parkour 3 Epic Jumps">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Parkour 3 Epic Jumps</h3>
@@ -552,7 +552,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/football-penalty-champions" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/football-penalty-champions.png" alt="Football Penalty Champions Shootout">
+                                <img src="https://fafgamess.github.io/img/football-penalty-champions.png" alt="Football Penalty Champions Shootout">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Football Penalty Champions Shootout</h3>
@@ -563,7 +563,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/narrow-one" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/narrow-one.png" alt="Narrow One 3D Archery Combat">
+                                <img src="https://fafgamess.github.io/img/narrow-one.png" alt="Narrow One 3D Archery Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Narrow One 3D Archery Combat</h3>
@@ -574,7 +574,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/animal-arena" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/animal-arena.png" alt="Animal Arena Wild Multiplayer Mayhem">
+                                <img src="https://fafgamess.github.io/img/animal-arena.png" alt="Animal Arena Wild Multiplayer Mayhem">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Animal Arena Wild Multiplayer Mayhem</h3>
@@ -585,7 +585,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/merge-fellas" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/merge-fellas.png" alt="Merge Fellas A Wacky Merging Puzzle">
+                                <img src="https://fafgamess.github.io/img/merge-fellas.png" alt="Merge Fellas A Wacky Merging Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Merge Fellas A Wacky Merging Puzzle</h3>
@@ -596,7 +596,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/parking-fury-3d-night-thief" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/parking-fury-3d-night-thief.png" alt="Parking Fury 3D Night Thief Stealth">
+                                <img src="https://fafgamess.github.io/img/parking-fury-3d-night-thief.png" alt="Parking Fury 3D Night Thief Stealth">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Parking Fury 3D Night Thief Stealth</h3>
@@ -607,7 +607,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/gun-mayhem-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/gun-mayhem-2.png" alt="Gun Mayhem 2 More Mayhem Is Here">
+                                <img src="https://fafgamess.github.io/img/gun-mayhem-2.png" alt="Gun Mayhem 2 More Mayhem Is Here">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Gun Mayhem 2 More Mayhem Is Here</h3>
@@ -618,7 +618,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/speed-stars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/speed-stars.png" alt="Speed Stars">
+                                <img src="https://fafgamess.github.io/img/speed-stars.png" alt="Speed Stars">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Speed Stars</h3>
@@ -629,7 +629,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/getaway-shootout" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/getaway-shootout.png" alt="Getaway Shootout A Chaotic 2-Player Race">
+                                <img src="https://fafgamess.github.io/img/getaway-shootout.png" alt="Getaway Shootout A Chaotic 2-Player Race">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Getaway Shootout A Chaotic 2-Player Race</h3>
@@ -640,7 +640,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/slope-2-multiplayer" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/slope-2-multiplayer.png" alt="Slope 2 Multiplayer">
+                                <img src="https://fafgamess.github.io/img/slope-2-multiplayer.png" alt="Slope 2 Multiplayer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Slope 2 Multiplayer</h3>
@@ -651,7 +651,7 @@ class="category-tag-item" style="background-color: #FF6D00;">
                     <div class="game-card">
                         <a href="/traffic-escape" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/traffic-escape.png" alt="Traffic Escape The Ultimate Car Jam Puzzle">
+                                <img src="https://fafgamess.github.io/img/traffic-escape.png" alt="Traffic Escape The Ultimate Car Jam Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Traffic Escape The Ultimate Car Jam Puzzle</h3>
